<resources>
        <string name="app_name">Calculator</string>
        <string name="display_default">0</string>
        <string name="Click0">0</string>
        <string name="Click1">1</string>
        <string name="Click2">2</string>
        <string name="Click3">3</string>
        <string name="Click4">4</string>
        <string name="Click5">5</string>
        <string name="Click6">6</string>
        <string name="Click7">7</string>
        <string name="Click8">8</string>
        <string name="Click9">9</string>
        <string name="Plus">+</string>
        <string name="Minus">-</string>
        <string name="Multiply">\u00D7</string>
        <string name="Divide">\u00F7</string>
        <string name="Sqrt">\u221A</string>
        <string name="Percent">%</string>
        <string name="Sign">\u00B1</string>
        <string name="Decimal">.</string>
        <string name="Equals">=</string>
        <string name="Clear">C</string>
</resources>